# parametric-coil-former

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  environment.yml  phasing_coil.py  phasing_coil.scad  viewer_check.ipynb
.github/workflows/: ci.yml  docker-ghcr.yml  release.yml  version-bump.yml
backend/: __init__.py  geometry.py  main.py  schemas.py
wasm-coil-former/: .gitignore  Cargo.toml  Makefile  README.md  package.json  worker.js  wrangler.toml
wasm-coil-former/src/: geometry.rs  lib.rs
wasm-coil-former/static/: embed.js  index.html
