[package]
name = "wasm-coil-former"
version = "0.1.3"
edition = "2021"
authors = ["W7HAK"]
description = "Parametric coil former for ham radio phasing lines – Rust/WASM plugin"
license = "MIT"
repository = "https://github.com/drollette/parametric-coil-former"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = "debuginfo"
